# PickleballSingleSocialV2

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Procfile  build.sh  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
backend/PickleballSinglesSocialV2/: asgi.py  settings.py  urls.py  wsgi.py
backend/api/: admin.py  auth.py  models.py  schemas.py  views.py
backend/api/management/commands/: close_match_form.py  expire_stale_registrations.py  process_matches.py  run_scheduled_tasks.py  send_dayof_reminders.py  send_marketing_emails.py  send_match_emails.py  send_match_form.py  send_match_reminder.py  send_payment_reminders.py  send_reminders.py  send_save_the_date.py  update_event_statuses.py
backend/api/migrations/: 0001_initial.py  0002_event_capacity_female_event_capacity_male_and_more.py  0003_remove_event_capacity_female_and_more.py  0004_remove_attendee_age_group_and_more.py  0005_alter_event_max_age.py  0006_attendee_experience_registration_attending_coaching_and_more.py  0007_alter_attendee_age.py  0008_marketingemaillog.py  0009_alter_event_status_alter_registration_status.py  0010_add_payment_reminder_sent_at.py  0011_add_emaillog_status_code.py
backend/api/services/: emails.py  mailerlite.py
backend/api/tests/: helpers.py  test_commands.py  test_emails.py  test_models.py  test_views.py
docs/superpowers/plans/: 2026-03-24-seo.md
docs/superpowers/specs/: 2026-03-24-seo-design.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  main.jsx  theme.js
frontend/src/components/: Footer.jsx  Nav.jsx  ProtectedRoute.jsx
frontend/src/pages/: AboutPage.jsx  CodeOfConductPage.jsx  EventListPage.jsx  FAQPage.jsx  HomePage.jsx  MatchFormPage.jsx  PayPage.jsx  PrivacyPolicyPage.jsx  (+3 more)
scripts/: dev-down.sh  dev-up.sh
(+7 files in other folders)
