[project]
name = "pickleballsinglessocialv2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.6.2",
    "django-ratelimit>=4.1.0",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.1.0",
    "stripe>=14.4.1",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "bandit>=1.9.0",
    "coverage>=7.0",
    "pip-audit>=2.9.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120
extend-exclude = ["api/migrations"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "UP",    # pyupgrade
    "DJ",    # flake8-django
]
ignore = [
    "S101",  # assert usage (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"api/tests/**" = ["S106"]  # hardcoded passwords in tests
"api/management/commands/**" = ["S106"]
"PickleballSinglesSocialV2/settings.py" = ["E402"]  # load_dotenv() must run before imports
"api/services/emails.py" = ["E501"]  # HTML templates have long inline CSS lines

[tool.bandit]
exclude_dirs = ["api/tests"]
